# sdypy-EMA

./: .gitignore  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py  sync_version.py
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  tutorial.rst
sdypy/EMA/: EMA.py  __init__.py  pole_picking.py  stabilization.py  tools.py
tests/: test_basic.py  test_synth_FRF.py
tests/test_tools/: closeness_criteria.py  generate_synth_frf.py  test_MCF.py
